force-app/main/default/objects/VersionTarif__c/VersionTarif__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>VersionTarif</label>
</CustomObject>