force-app/main/default/objects/VersionTarif__c/fields/Lien__c.field-meta.xml
<CustomField>
    <fullName>Lien__c</fullName>
    <label>Lien</label>
    <required>true</required>
    <type>Url</type>
</CustomField>