force-app/main/default/objects/VersionTarif__c/fields/nomFichier__c.field-meta.xml
<CustomField>
    <fullName>nomFichier__c</fullName>
    <label>Nom du fichier</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>