force-app/main/default/objects/VersionTarif__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <externalId>true</externalId>
    <label>Version</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>